--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "todolist api",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon index.js"
   },
   "keywords": [
     "api",
@@ -12,5 +13,8 @@
     "express"
   ],
   "author": "Evandri Ridho Hasmono",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "nodemon": "^3.1.9"
+  }
 }
