--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Evandri Ridho Hasmono",
   "license": "MIT",
   "dependencies": {
+    "express": "^4.21.2",
     "nodemon": "^3.1.9"
   }
 }
